--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.1",
     "react-scripts": "^1.1.5",
     "redux": "^4.2.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
